changed added fetures

--- a/fontEnd/dbApp/app.json
+++ b/fontEnd/dbApp/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Badminton Court Booking",
+    "name": "Georgies",
     "slug": "dbApp",
     "version": "1.0.0",
     "orientation": "portrait",
