--- a/fontEnd/dbApp/package.json
+++ b/fontEnd/dbApp/package.json
@@ -60,6 +60,7 @@
     "@react-native-community/cli": "^20.0.2",
     "@react-native/metro-config": "^0.82.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "baseline-browser-mapping": "^2.9.16",
     "metro-config": "^0.83.3",
     "react-native-bundle-visualizer": "^3.1.3",
     "visualize-bundle": "^1.4.0"
